@@ -89,5 +89,6 @@ and ideas to make this software available.
 	Brad Smith <brad@comstyle.com>
 	Jerry Murdock <jmurdock@itraktech.com>
 	Glen Gibb <grg@ridley.unimelb.edu.au>
+	Michael Pomraning <mjp-squidbz@securepipe.com>
 
 	Duane Wessels <wessels@squid-cache.org>
